chrome/browser/chrome_content_browser_client.cc
@@ -1270,9 +1270,7 @@ blink::UserAgentMetadata GetUserAgentMetadata() {
   return metadata;
 }
 
-ChromeContentBrowserClient::ChromeContentBrowserClient(
-    StartupData* startup_data)
-    : startup_data_(startup_data) {
+ChromeContentBrowserClient::ChromeContentBrowserClient() {
 #if BUILDFLAG(ENABLE_PLUGINS)
   extra_parts_.push_back(new ChromeContentBrowserClientPluginsPart);
 #endif
@@ -1355,31 +1353,31 @@ ChromeContentBrowserClient::CreateBrowserMainParts(
   // Construct the Main browser parts based on the OS type.
 #if defined(OS_WIN)
   main_parts =
-      std::make_unique<ChromeBrowserMainPartsWin>(parameters, startup_data_);
+      std::make_unique<ChromeBrowserMainPartsWin>(parameters, &startup_data_);
 #elif defined(OS_MAC)
   main_parts =
-      std::make_unique<ChromeBrowserMainPartsMac>(parameters, startup_data_);
+      std::make_unique<ChromeBrowserMainPartsMac>(parameters, &startup_data_);
 #elif defined(OS_CHROMEOS)
   main_parts = std::make_unique<chromeos::ChromeBrowserMainPartsChromeos>(
-      parameters, startup_data_);
+      parameters, &startup_data_);
 #elif defined(OS_LINUX)
   main_parts =
-      std::make_unique<ChromeBrowserMainPartsLinux>(parameters, startup_data_);
+      std::make_unique<ChromeBrowserMainPartsLinux>(parameters, &startup_data_);
 #elif defined(OS_ANDROID)
   main_parts = std::make_unique<ChromeBrowserMainPartsAndroid>(parameters,
-                                                               startup_data_);
+                                                               &startup_data_);
 #elif defined(OS_POSIX)
   main_parts =
-      std::make_unique<ChromeBrowserMainPartsPosix>(parameters, startup_data_);
+      std::make_unique<ChromeBrowserMainPartsPosix>(parameters, &startup_data_);
 #else
   NOTREACHED();
   main_parts =
-      std::make_unique<ChromeBrowserMainParts>(parameters, startup_data_);
+      std::make_unique<ChromeBrowserMainParts>(parameters, &startup_data_);
 #endif
 
   bool add_profiles_extra_parts = true;
 #if defined(OS_ANDROID)
-  if (startup_data_->HasBuiltProfilePrefService())
+  if (startup_data_.HasBuiltProfilePrefService())
     add_profiles_extra_parts = false;
 #endif
   if (add_profiles_extra_parts)
@@ -3804,23 +3802,21 @@ bool ChromeContentBrowserClient::IsRendererCodeIntegrityEnabled() {
 void ChromeContentBrowserClient::WillStartServiceManager() {
 #if defined(OS_WIN) || defined(OS_MAC) || \
     (defined(OS_LINUX) && !defined(OS_CHROMEOS))
-  if (startup_data_) {
-    auto* chrome_feature_list_creator =
-        startup_data_->chrome_feature_list_creator();
-    // This has to run very early before ServiceManagerContext is created.
-    const policy::PolicyMap& policies =
-        chrome_feature_list_creator->browser_policy_connector()
-            ->GetPolicyService()
-            ->GetPolicies(policy::PolicyNamespace(policy::POLICY_DOMAIN_CHROME,
-                                                  std::string()));
-    const base::Value* audio_sandbox_enabled_policy_value =
-        policies.GetValue(policy::key::kAudioSandboxEnabled);
-    if (audio_sandbox_enabled_policy_value) {
-      bool force_enable_audio_sandbox;
-      audio_sandbox_enabled_policy_value->GetAsBoolean(
-          &force_enable_audio_sandbox);
-      SetForceAudioServiceSandboxed(force_enable_audio_sandbox);
-    }
+  auto* chrome_feature_list_creator =
+      startup_data_.chrome_feature_list_creator();
+  // This has to run very early before ServiceManagerContext is created.
+  const policy::PolicyMap& policies =
+      chrome_feature_list_creator->browser_policy_connector()
+          ->GetPolicyService()
+          ->GetPolicies(policy::PolicyNamespace(policy::POLICY_DOMAIN_CHROME,
+                                                std::string()));
+  const base::Value* audio_sandbox_enabled_policy_value =
+      policies.GetValue(policy::key::kAudioSandboxEnabled);
+  if (audio_sandbox_enabled_policy_value) {
+    bool force_enable_audio_sandbox;
+    audio_sandbox_enabled_policy_value->GetAsBoolean(
+        &force_enable_audio_sandbox);
+    SetForceAudioServiceSandboxed(force_enable_audio_sandbox);
   }
 #endif
 }
@@ -4842,8 +4838,8 @@ void ChromeContentBrowserClient::OnNetworkServiceCreated(
     DCHECK(g_browser_process->local_state());
     local_state = g_browser_process->local_state();
   } else {
-    DCHECK(startup_data_->chrome_feature_list_creator()->local_state());
-    local_state = startup_data_->chrome_feature_list_creator()->local_state();
+    DCHECK(startup_data_.chrome_feature_list_creator()->local_state());
+    local_state = startup_data_.chrome_feature_list_creator()->local_state();
   }
 
   if (!data_use_measurement::ChromeDataUseMeasurement::GetInstance())
